vertical align fix

--- a/mysheet.css
+++ b/mysheet.css
@@ -73,8 +73,8 @@ html, body {
 .content4 {
     grid-area: b;
     align-content: center;
-    align-items: center;
     padding: 10px;
+    vertical-align: top
 }
 
 .ul {
